tests/idris2/coverage003/expected
1/1: Building Cover (Cover.idr)
Error: While processing left hand side of badBar. Can't match on 0 as it must have a polymorphic type.

Cover:16:8--16:9
 12 | cty Nat (S _) = S Z
 13 | cty _ x = S (S Z)
 14 | 
 15 | badBar : a -> Nat
 16 | badBar Z = Z
             ^

Main> Main.foo: foo (0, S _)
foo (S _, _)
Main> Main.bar: bar _
Main> Main.cty: All cases covered
Main> Bye for now!
